--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ main{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border: 2px solid rgba(75, 85, 99, 0.3);;
+  border: 2px solid rgba(75, 85, 99, 0.3);
   border-radius: 16px;
   margin-top: 56px;
   img{
